--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.1",
+    "formik": "^2.4.6",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.4",
     "react-router-dom": "^7.9.4",
-    "tailwindcss": "^4.1.16"
+    "tailwindcss": "^4.1.16",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
